// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PermissionDetailScreen, camera locks the camera detail with native-backed levels 1`] = `
<View
  className="flex-1"
  style={
    {
      "backgroundColor": "#0e0e0e",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 58,
        "paddingHorizontal": 8,
      }
    }
  >
    <View
      accessibilityLabel="Go back"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 21,
          "height": 42,
          "justifyContent": "center",
          "width": 42,
        }
      }
    >
      <View
        color="#fff"
        size={22}
        testID="icon-ArrowLeft"
      />
    </View>
    <Text
      style={
        {
          "color": "#fff",
          "flex": 1,
          "fontSize": 20,
          "fontWeight": "700",
          "marginLeft": 4,
        }
      }
    >
      Camera
    </Text>
  </View>
  <RCTScrollView
    className="flex-1 px-4"
    contentContainerStyle={
      {
        "paddingBottom": 44,
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        accessibilityLabel="Camera. Not Requested. Used for photo capture and document scanning."
        accessibilityRole="summary"
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#1a1a1a",
            "borderColor": "#333",
            "borderRadius": 18,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 14,
            "marginTop": 10,
            "padding": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": undefined,
              "borderRadius": 16,
              "height": 48,
              "justifyContent": "center",
              "width": 48,
            }
          }
        >
          <View
            color="#aaa"
            size={23}
            testID="icon-Camera"
          />
        </View>
        <View
          style={
            {
              "flex": 1,
              "minWidth": 0,
            }
          }
        >
          <Text
            style={
              {
                "color": "#fff",
                "fontSize": 17,
                "fontWeight": "700",
              }
            }
          >
            Not Requested
          </Text>
          <Text
            style={
              {
                "color": "#777",
                "fontSize": 13,
                "lineHeight": 18,
                "marginTop": 3,
              }
            }
          >
            Used for photo capture and document scanning.
          </Text>
        </View>
      </View>
      <Text
        style={
          {
            "color": "#777",
            "fontSize": 13,
            "lineHeight": 18,
            "marginTop": 14,
            "paddingHorizontal": 2,
          }
        }
      >
        Your device has not been asked yet. Nothing is accessed until you allow it.
      </Text>
      <View
        accessibilityLabel="Allow Camera"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#1a1a1a",
            "borderColor": "#333",
            "borderRadius": 18,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 12,
            "marginTop": 18,
            "minHeight": 62,
            "opacity": 1,
            "paddingHorizontal": 16,
            "paddingVertical": 14,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
              "minWidth": 0,
            }
          }
        >
          <Text
            style={
              {
                "color": "#fff",
                "fontSize": 16,
                "fontWeight": "600",
              }
            }
          >
            Allow Camera
          </Text>
          <Text
            style={
              {
                "color": "#777",
                "fontSize": 13,
                "lineHeight": 18,
                "marginTop": 2,
              }
            }
          >
            Your device asks you to decide. AGI never sees an answer you do not give.
          </Text>
        </View>
        <View
          color="#777"
          size={18}
          style={
            {
              "flexShrink": 0,
            }
          }
          testID="icon-ChevronRight"
        />
      </View>
      <View
        style={
          {
            "backgroundColor": "#1a1a1a",
            "borderColor": "#333",
            "borderRadius": 18,
            "borderWidth": 1,
            "marginTop": 16,
            "paddingHorizontal": 14,
            "paddingVertical": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#777",
              "fontSize": 13,
              "lineHeight": 18,
            }
          }
        >
          This screen shows what your device currently reports. AGI cannot change a device permission on your behalf.
        </Text>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`PermissionsScreen, index locks the native-backed permission list card 1`] = `
<View
  className="flex-1"
  style={
    {
      "backgroundColor": "#0e0e0e",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "minHeight": 50,
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      }
    }
  >
    <View
      accessibilityLabel="Go back"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        }
      }
    >
      <View
        color="#fff"
        size={21}
        testID="icon-ArrowLeft"
      />
    </View>
    <Text
      style={
        {
          "color": "#fff",
          "fontSize": 17,
          "fontWeight": "700",
        }
      }
    >
      Permissions
    </Text>
  </View>
  <RCTScrollView
    className="flex-1"
    contentContainerStyle={
      {
        "paddingBottom": 36,
        "paddingHorizontal": 16,
        "paddingTop": 8,
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          {
            "marginBottom": 12,
            "marginTop": 10,
          }
        }
      >
        <Text
          style={
            {
              "color": "#777",
              "fontSize": 12,
              "fontWeight": "700",
              "textTransform": "uppercase",
            }
          }
        >
          App Permissions
        </Text>
      </View>
      <View
        style={
          {
            "backgroundColor": "#1a1a1a",
            "borderColor": "#333",
            "borderRadius": 18,
            "borderWidth": 1,
            "overflow": "hidden",
            "paddingHorizontal": 10,
          }
        }
      >
        <View>
          <View
            accessibilityLabel="Microphone permission. Access level: Ask. Tap to manage."
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 14,
                "minHeight": 72,
                "paddingHorizontal": 10,
                "paddingVertical": 10,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "backgroundColor": undefined,
                  "borderRadius": 10,
                  "height": 32,
                  "justifyContent": "center",
                  "width": 32,
                }
              }
            >
              <View
                color="#aaa"
                size={19}
                testID="icon-Mic"
              />
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "minWidth": 0,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#fff",
                    "fontSize": 16,
                    "fontWeight": "600",
                  }
                }
              >
                Microphone
              </Text>
              <Text
                numberOfLines={2}
                style={
                  {
                    "color": "#777",
                    "fontSize": 13,
                    "lineHeight": 18,
                    "marginTop": 2,
                  }
                }
              >
                Used for voice input and audio recording.
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "flexShrink": 0,
                  "gap": 6,
                  "justifyContent": "flex-end",
                  "minWidth": 50,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#777",
                    "fontSize": 13,
                    "fontWeight": "600",
                  }
                }
              >
                Ask
              </Text>
              <View
                color="#777"
                size={17}
                style={
                  {
                    "flexShrink": 0,
                  }
                }
                testID="icon-ChevronRight"
              />
            </View>
          </View>
          <View
            testID="separator"
          />
        </View>
        <View>
          <View
            accessibilityLabel="Camera permission. Access level: Ask. Tap to manage."
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 14,
                "minHeight": 72,
                "paddingHorizontal": 10,
                "paddingVertical": 10,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "backgroundColor": undefined,
                  "borderRadius": 10,
                  "height": 32,
                  "justifyContent": "center",
                  "width": 32,
                }
              }
            >
              <View
                color="#aaa"
                size={19}
                testID="icon-Camera"
              />
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "minWidth": 0,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#fff",
                    "fontSize": 16,
                    "fontWeight": "600",
                  }
                }
              >
                Camera
              </Text>
              <Text
                numberOfLines={2}
                style={
                  {
                    "color": "#777",
                    "fontSize": 13,
                    "lineHeight": 18,
                    "marginTop": 2,
                  }
                }
              >
                Used for photo capture and document scanning.
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "flexShrink": 0,
                  "gap": 6,
                  "justifyContent": "flex-end",
                  "minWidth": 50,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#777",
                    "fontSize": 13,
                    "fontWeight": "600",
                  }
                }
              >
                Ask
              </Text>
              <View
                color="#777"
                size={17}
                style={
                  {
                    "flexShrink": 0,
                  }
                }
                testID="icon-ChevronRight"
              />
            </View>
          </View>
          <View
            testID="separator"
          />
        </View>
        <View>
          <View
            accessibilityLabel="Photos & Files permission. Access level: Ask. Tap to manage."
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 14,
                "minHeight": 72,
                "paddingHorizontal": 10,
                "paddingVertical": 10,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "backgroundColor": undefined,
                  "borderRadius": 10,
                  "height": 32,
                  "justifyContent": "center",
                  "width": 32,
                }
              }
            >
              <View
                color="#aaa"
                size={19}
                testID="icon-Image"
              />
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "minWidth": 0,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#fff",
                    "fontSize": 16,
                    "fontWeight": "600",
                  }
                }
              >
                Photos & Files
              </Text>
              <Text
                numberOfLines={2}
                style={
                  {
                    "color": "#777",
                    "fontSize": 13,
                    "lineHeight": 18,
                    "marginTop": 2,
                  }
                }
              >
                Used to attach images and documents from your library.
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "flexShrink": 0,
                  "gap": 6,
                  "justifyContent": "flex-end",
                  "minWidth": 50,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#777",
                    "fontSize": 13,
                    "fontWeight": "600",
                  }
                }
              >
                Ask
              </Text>
              <View
                color="#777"
                size={17}
                style={
                  {
                    "flexShrink": 0,
                  }
                }
                testID="icon-ChevronRight"
              />
            </View>
          </View>
          <View
            testID="separator"
          />
        </View>
        <View>
          <View
            accessibilityLabel="Notifications permission. Access level: Ask. Tap to manage."
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 14,
                "minHeight": 72,
                "paddingHorizontal": 10,
                "paddingVertical": 10,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "backgroundColor": undefined,
                  "borderRadius": 10,
                  "height": 32,
                  "justifyContent": "center",
                  "width": 32,
                }
              }
            >
              <View
                color="#aaa"
                size={19}
                testID="icon-Bell"
              />
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "minWidth": 0,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#fff",
                    "fontSize": 16,
                    "fontWeight": "600",
                  }
                }
              >
                Notifications
              </Text>
              <Text
                numberOfLines={2}
                style={
                  {
                    "color": "#777",
                    "fontSize": 13,
                    "lineHeight": 18,
                    "marginTop": 2,
                  }
                }
              >
                Used for local model, download, and reminder alerts.
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "flexShrink": 0,
                  "gap": 6,
                  "justifyContent": "flex-end",
                  "minWidth": 50,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#777",
                    "fontSize": 13,
                    "fontWeight": "600",
                  }
                }
              >
                Ask
              </Text>
              <View
                color="#777"
                size={17}
                style={
                  {
                    "flexShrink": 0,
                  }
                }
                testID="icon-ChevronRight"
              />
            </View>
          </View>
          <View
            testID="separator"
          />
        </View>
        <View>
          <View
            accessibilityLabel="Calendar permission. Access level: Ask. Tap to manage."
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 14,
                "minHeight": 72,
                "paddingHorizontal": 10,
                "paddingVertical": 10,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "backgroundColor": undefined,
                  "borderRadius": 10,
                  "height": 32,
                  "justifyContent": "center",
                  "width": 32,
                }
              }
            >
              <View
                color="#aaa"
                size={19}
                testID="icon-CalendarDays"
              />
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "minWidth": 0,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#fff",
                    "fontSize": 16,
                    "fontWeight": "600",
                  }
                }
              >
                Calendar
              </Text>
              <Text
                numberOfLines={2}
                style={
                  {
                    "color": "#777",
                    "fontSize": 13,
                    "lineHeight": 18,
                    "marginTop": 2,
                  }
                }
              >
                Optional. Used only after you enable device calendar context.
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "flexShrink": 0,
                  "gap": 6,
                  "justifyContent": "flex-end",
                  "minWidth": 50,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#777",
                    "fontSize": 13,
                    "fontWeight": "600",
                  }
                }
              >
                Ask
              </Text>
              <View
                color="#777"
                size={17}
                style={
                  {
                    "flexShrink": 0,
                  }
                }
                testID="icon-ChevronRight"
              />
            </View>
          </View>
          <View
            testID="separator"
          />
        </View>
        <View>
          <View
            accessibilityLabel="Reminders permission. Access level: Ask. Tap to manage."
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 14,
                "minHeight": 72,
                "paddingHorizontal": 10,
                "paddingVertical": 10,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "backgroundColor": undefined,
                  "borderRadius": 10,
                  "height": 32,
                  "justifyContent": "center",
                  "width": 32,
                }
              }
            >
              <View
                color="#aaa"
                size={19}
                testID="icon-ListChecks"
              />
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "minWidth": 0,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#fff",
                    "fontSize": 16,
                    "fontWeight": "600",
                  }
                }
              >
                Reminders
              </Text>
              <Text
                numberOfLines={2}
                style={
                  {
                    "color": "#777",
                    "fontSize": 13,
                    "lineHeight": 18,
                    "marginTop": 2,
                  }
                }
              >
                Used only when you explicitly create an Apple Reminder; never read automatically.
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "flexShrink": 0,
                  "gap": 6,
                  "justifyContent": "flex-end",
                  "minWidth": 50,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#777",
                    "fontSize": 13,
                    "fontWeight": "600",
                  }
                }
              >
                Ask
              </Text>
              <View
                color="#777"
                size={17}
                style={
                  {
                    "flexShrink": 0,
                  }
                }
                testID="icon-ChevronRight"
              />
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#1a1a1a",
            "borderColor": "#333",
            "borderRadius": 18,
            "borderWidth": 1,
            "marginTop": 16,
            "paddingHorizontal": 14,
            "paddingVertical": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#777",
              "fontSize": 13,
              "lineHeight": 18,
            }
          }
        >
          Permissions are managed by your device. Changing a permission may open Settings.
        </Text>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
